syntax = "proto3";

package classroom.v1;

import "google/protobuf/timestamp.proto";
import "google/api/datetime.proto";

option go_package="github.com/qthuy2k1/thesis-management-backend/classroom/api/v1";

service ClassroomService {
    rpc CreateClassroom(CreateClassroomRequest) returns (CreateClassroomResponse){}
    
    rpc GetClassroom(GetClassroomRequest) returns (GetClassroomResponse){}

    rpc UpdateClassroom(UpdateClassroomRequest) returns (UpdateClassroomResponse){}

    rpc DeleteClassroom(DeleteClassroomRequest) returns (DeleteClassroomResponse){}

    rpc GetClassrooms(GetClassroomsRequest) returns (GetClassroomsResponse) {}

    rpc CheckClassroomExists(CheckClassroomExistsRequest) returns (CheckClassroomExistsResponse){};
}


message CommonClassroomResponse {
    int64 statusCode = 1;
    string message = 2;
}

// ====== POST ======
message ClassroomInput {
    string title = 1;
    string description = 2;
    string status = 3;
    string lecturerID = 4;
    string classCourse = 5;
    string topicTags = 6;
    int64 quantityStudent = 7;
}


message ClassroomResponse {
    int64 id = 1;
    string title = 2;
    string description = 3;
    string status = 4;
    string lecturerID = 5;
    string classCourse = 6;
    string topicTags = 7;
    int64 quantityStudent = 8;
    google.protobuf.Timestamp created_at = 9;
    google.protobuf.Timestamp updated_at = 10;

    repeated PostResponse post = 11;
    repeated ExerciseResponse exercise = 12;
}

message PostResponse {
    int64 id = 1;
    string title = 2;
    string content = 3;
    int64 classroomID = 4;
    int64 reportingStageID = 5;
    string authorID = 6;
    google.protobuf.Timestamp createdAt = 7;
    google.protobuf.Timestamp updatedAt = 8;
}

message ExerciseResponse {
    int64 id = 1;
    string title = 2;
    string content = 3;
    int64 classroomID = 4;
    google.type.DateTime deadline = 5;
    int64 score = 6;
    int64 reportingStageID = 7;
    string authorID = 8;
    google.protobuf.Timestamp createdAt = 9;
    google.protobuf.Timestamp updatedAt = 10;
}



message CreateClassroomRequest {
   ClassroomInput classroom = 1;
}

message CreateClassroomResponse {
    CommonClassroomResponse response = 1;
}


// ====== GET ======
message GetClassroomRequest {
    int64 id = 1;
}

message GetClassroomResponse {
    CommonClassroomResponse response = 1;
    ClassroomResponse classroom = 2;
} 

message CheckClassroomExistsRequest {
    int64 classroomID = 1;
}

message CheckClassroomExistsResponse {
    bool exists = 1;
}


// ====== PUT ======
message UpdateClassroomRequest {
    int64 id = 1;
    ClassroomInput classroom = 2;
}

message UpdateClassroomResponse {
    CommonClassroomResponse response = 1;
}

// ====== DELETE ======
message DeleteClassroomRequest {
    int64 id = 1;
}

message DeleteClassroomResponse {
    CommonClassroomResponse response = 1;
}



// ====== GET ALL ======
message GetClassroomsRequest {
    int64 page = 1;
    int64 limit = 2;
    string titleSearch = 3;
    string sortColumn = 4;
    string sortOrder = 5;
}

message GetClassroomsResponse {
    CommonClassroomResponse response = 1;
    int64 totalCount = 2;
    repeated ClassroomResponse classrooms = 3;
}
